fix alignments

--- a/src/app/(pages)/(home)/components/calls to action/styles.scss
+++ b/src/app/(pages)/(home)/components/calls to action/styles.scss
@@ -4,5 +4,11 @@
     flex-wrap: wrap-reverse;
     align-items: center;
     justify-content: center;
-    gap: 16px;
+    gap: 8px 16px;
+
+
+    @media screen and (min-width:760px) {
+        width: 100%;
+        
+    }
 }
